changed markup of chat and fixed styles for sticky header on mobile in this page

--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -678,12 +678,16 @@
 
   &_live {
     margin-right: auto;
-    color: $secondary-color;
+    color: $primary-color;
     position: relative;
     display: flex;
     align-content: center;
     align-items: center;
     font-size: 15px;
+
+    &:hover {
+      color: $primary-color-darken;
+    }
 
     &.disabled {
       color: $main-color;
